--- a/css/foundation.css
+++ b/css/foundation.css
@@ -437,7 +437,8 @@ html {
 body {
   margin: 0;
   padding: 0;
-  background: #fefefe;
+  background: #cc4b37;
+  text-align: center;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
   line-height: 1.5;
@@ -1310,6 +1311,7 @@ h4,
 h5,
 h6 {
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  
   font-style: normal;
   font-weight: normal;
   color: inherit;
@@ -1332,6 +1334,7 @@ h1 {
 h2 {
   font-size: 1.25rem;
   line-height: 1.4;
+  font: 800 64px/64px 'Open Sans', sans-serif;
   margin-top: 0;
   margin-bottom: 0.5rem; }
 
