Make down button work and add editable button

--- a/css/app.css
+++ b/css/app.css
@@ -1,17 +1,41 @@
 .template {
   visibility: hidden;
 }
-
+.li{
+  font-weight: bold
+}
 .student {
+  border: 1px solid #ddd;
+  padding: 0.75rem 1.25rem;
   height: 4rem;
+}
+
+.student + .student {
+  border-top: none;
+}
+
+span.student-name {
+  line-height: 40px;
+  white-space: nowrap;
 }
 
 .actions {
   float: right;
+  margin-bottom: 0;
 }
-ul{
-  list-style-type: none
+
+.promoted {
+  background-color: #FFD700;
+  border-color: #FFC656;
 }
-li{
-  font-weight: bold
+
+.student:first-child button.move-up {
+  background-color: #ddd;
+  color: #eee;
+  cursor: not-allowed;
+}
+.student:nth-last-child(2) button.move-down {
+  background-color: #ddd;
+  color: #eee;
+  cursor: not-allowed
 }
