--- a/css/foundation.css
+++ b/css/foundation.css
@@ -437,7 +437,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  background: #cc8b00;
+  background: #126195;
   text-align: center;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
